# rust-lightning

./: .editorconfig  .gitignore  .travis.yml  ARCH.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GLOSSARY.md  LICENSE.md  README.md  SECURITY.md  build.rs  codecov.yml  genbindings.sh  rust-toolchain.toml  rustfmt.toml  rustfmt_excluded_files
background-processor/: Cargo.toml
background-processor/src/: lib.rs
bench/: Cargo.toml  README.md
bench/benches/: bench.rs
bindings/: Cargo.toml  README.md
bindings/src/: block_notirifer.rs  blocknotifier.rs  broadcaster.rs  channelmanager.rs  channelmonitor.rs  error.rs  fee_estimator.rs  ffi_test_utils.rs  is_null.rs  lib.rs  logger.rs  peermanager.rs  test_utils.rs
bindings/src/adaptors/: mod.rs  primitives.rs
bindings/src/handle/: mod.rs  thread_bound.rs
bindings/src/lazy_static/: inline_lazy.rs  mod.rs
bindings/src/utils/: macros.rs  mod.rs  option_extensions.rs
c-bindings-gen/: Cargo.toml  README.md
c-bindings-gen/src/: blocks.rs  main.rs  types.rs
examples/bitcoind-rpc-client/: Cargo.toml  README.md
examples/bitcoind-rpc-client/src/: bitcoind_client.rs  convert.rs  main.rs
lightning/: Cargo.toml
lightning-background-prober/: Cargo.toml
lightning-background-prober/src/: lib.rs
lightning-background-processor/: Cargo.toml
lightning-background-processor/src/: fwd_batch.rs  lib.rs
lightning-block-sync/: Cargo.toml
lightning-block-sync/src/: async_poll.rs  convert.rs  gossip.rs  http.rs  http_clients.rs  http_endpoint.rs  init.rs  lib.rs  poll.rs  poller.rs  rest.rs  rpc.rs  test_utils.rs  utils.rs
lightning-c-bindings/: Cargo.toml  README.md  cbindgen.toml  demo.c  demo.cpp
lightning-c-bindings/include/: lightning.h  lightningpp.hpp  rust_types.h
lightning-c-bindings/src/: lib.rs
lightning-c-bindings/src/bitcoin/: network.rs
lightning-c-bindings/src/c_types/: derived.rs  mod.rs
lightning-c-bindings/src/chain/: chaininterface.rs  chainmonitor.rs  channelmonitor.rs  keysinterface.rs  mod.rs  transaction.rs
lightning-c-bindings/src/ln/: chan_utils.rs  channelmanager.rs  channelmonitor.rs  features.rs  mod.rs  msgs.rs  peer_handler.rs
lightning-c-bindings/src/routing/: mod.rs  network_graph.rs  router.rs
lightning-c-bindings/src/util/: config.rs  errors.rs  events.rs  logger.rs  macro_logger.rs  mod.rs  ser.rs
lightning-custom-message/: Cargo.toml
lightning-custom-message/src/: lib.rs
lightning-dns-resolver/: Cargo.toml
lightning-dns-resolver/src/: lib.rs
lightning-htlc-scorer/: Cargo.toml
lightning-htlc-scorer/src/: lib.rs
lightning-invoice/: .gitignore  .travis-kcov.sh  .travis.yml  Cargo.toml  README.md
lightning-invoice/fuzz/: .gitignore  Cargo.toml  ci-fuzz.sh
lightning-invoice/fuzz/fuzz_targets/: serde_data_part.rs
lightning-invoice/src/: de.rs  lib.rs  payment.rs  ser.rs  sync.rs  tb.rs  test_ser_de.rs  time_utils.rs  utils.rs
lightning-invoice/tests/: ser_de.rs
lightning-liquidity/: Cargo.toml  README.md
lightning-liquidity/.cargo/: config.toml
lightning-liquidity/src/: dos_protection_enforcer.rs  events.rs  lib.rs  manager.rs  message_queue.rs  persist.rs  utils.rs
lightning-liquidity/src/events/: event_queue.rs  mod.rs
lightning-liquidity/src/lsps0/: client.rs  event.rs  mod.rs  msgs.rs  ser.rs  service.rs
lightning-liquidity/src/lsps1/: client.rs  event.rs  mod.rs  msgs.rs  peer_state.rs  service.rs  utils.rs
lightning-liquidity/src/lsps2/: client.rs  event.rs  mod.rs  msgs.rs  payment_queue.rs  router.rs  service.rs  utils.rs
lightning-liquidity/src/lsps5/: client.rs  event.rs  mod.rs  msgs.rs  notifications.rs  service.rs  url_utils.rs  utils.rs  validator.rs
lightning-liquidity/src/lsps7/: client.rs  event.rs  mod.rs  msgs.rs
lightning-liquidity/src/sync/: debug_sync.rs  fairrwlock.rs  mod.rs  nostd_sync.rs  test_lockorder_checks.rs
lightning-liquidity/src/tests/: utils.rs
lightning-liquidity/src/utils/: async_poll.rs  bounded_map.rs  mod.rs  time.rs
lightning-liquidity/tests/: lsps0_integration_tests.rs  lsps1_integration_tests.rs  lsps2_integration_tests.rs  lsps5_integration_tests.rs  signing_tests.rs
lightning-liquidity/tests/common/: mod.rs
lightning-macros/: Cargo.toml
lightning-macros/src/: lib.rs
lightning-net/: Cargo.toml
lightning-net-tokio/: Cargo.toml
lightning-net-tokio/src/: lib.rs
lightning-net-tor/: Cargo.toml  README.md  TESTING.md
lightning-net-tor/src/: lib.rs
lightning-net-tor/tests/: integration_test.rs
lightning-net/src/: lib.rs
lightning-persister/: Cargo.toml
lightning-persister/src/: fs_store.rs  fs_store_common.rs  fs_store_v2.rs  lib.rs  test_utils.rs  util.rs  utils.rs  vss_store.rs
lightning-persister/src/fs_store/: common.rs  mod.rs  v1.rs  v2.rs
lightning-persister/src/sqlite_store/: migrations.rs  mod.rs
lightning-rapid-gossip-sync/: Cargo.toml  README.md
lightning-rapid-gossip-sync/src/: error.rs  lib.rs  processing.rs
lightning-tests/: Cargo.toml
lightning-tests/src/: lib.rs  upgrade_downgrade_tests.rs
lightning-transaction-sync/: Cargo.toml
lightning-transaction-sync/src/: common.rs  electrum.rs  error.rs  esplora.rs  lib.rs
lightning-transaction-sync/tests/: integration_tests.rs
lightning-types/: Cargo.toml
lightning-types/src/: amount.rs  features.rs  lib.rs  payment.rs  routing.rs  string.rs  unicode.rs
lightning/fuzz/fuzz_targets/: chanmon_fail_consistency.rs  full_stack_target.rs  router_target.rs
lightning/src/: debug_sync.rs  lib.rs  sync.rs
lightning/src/blinded_path/: message.rs  mod.rs  payment.rs  utils.rs
lightning/src/chain/: chaininterface.rs  chainmonitor.rs  channelmonitor.rs  deferred.rs  keysinterface.rs  mempoolinterface.rs  mod.rs  onchaintx.rs  package.rs  signature.rs  transaction.rs  utxointerface.rs
msrv-no-dev-deps-check/: Cargo.toml
mutual-message-exchange/: Cargo.toml
mutual-message-exchange/src/: chacha20.rs  chacha20poly1305rfc.rs  lib.rs  poly1305.rs
net-tokio/: Cargo.toml
net-tokio/src/: lib.rs
no-std-check/: Cargo.toml
possiblyrandom/: Cargo.toml
possiblyrandom/src/: lib.rs
(+546 files in other folders)
