[package]
name = "background-processor"
version = "0.1.0"
authors = ["Valentine Wallace <vwallace@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.26"
lightning = { version = "0.0.12", path = "../lightning", features = ["allow_wallclock_use"] }
lightning-persister = { version = "0.0.1", path = "../lightning-persister" }

[dev-dependencies]
lightning = { version = "0.0.12", path = "../lightning", features = ["_test_utils"] }
