[package]
name = "lightning-background-processor"
version = "0.0.116-rc1"
authors = ["Valentine Wallace <vwallace@protonmail.com>"]
license = "MIT OR Apache-2.0"
repository = "http://github.com/lightningdevkit/rust-lightning"
description = """
Utilities to perform required background tasks for Rust Lightning.
"""
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
futures = [ ]
std = ["lightning/std", "lightning-rapid-gossip-sync/std"]

default = ["std"]

[dependencies]
bitcoin = { version = "0.29.0", default-features = false }
lightning = { version = "0.0.116-rc1", path = "../lightning", default-features = false }
lightning-rapid-gossip-sync = { version = "0.0.116-rc1", path = "../lightning-rapid-gossip-sync", default-features = false }

[dev-dependencies]
tokio = { version = "1.14", features = [ "macros", "rt", "rt-multi-thread", "sync", "time" ] }
lightning = { version = "0.0.116-rc1", path = "../lightning", features = ["_test_utils"] }
lightning-invoice = { version = "0.24.0-rc1", path = "../lightning-invoice" }
lightning-persister = { version = "0.0.116-rc1", path = "../lightning-persister" }
