[package]
name = "lightning-c-bindings"
version = "0.0.1"
authors = ["Matt Corallo"]
license = "Apache-2.0"
edition = "2018"
description = """
Utilities to fetch the chain from Bitcoin Core REST/RPC Interfaces and feed them into Rust Lightning.
"""

[lib]
name = "lightning"
crate-type = ["staticlib"
# Note that the following line is matched exactly by genbindings to turn off dylib creation
,"cdylib"]

[dependencies]
bitcoin = "0.24"
lightning = { version = "0.0.11", path = "../lightning" }
