[package]
name = "lightning-custom-message"
version = "0.0.118"
authors = ["Jeffrey Czyz"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightningdevkit/rust-lightning"
description = """
Utilities for supporting custom peer-to-peer messages in LDK.
"""
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitcoin = "0.30.1"
lightning = { version = "0.0.118", path = "../lightning" }
