[package]
name = "lightning-custom-message"
version = "0.3.0-beta1"
authors = ["Jeffrey Czyz"]
license = "MIT OR Apache-2.0"
repository = "https://git.rust-bitcoin.org/lightningdevkit/rust-lightning"
readme = "../README.md"
description = """
Utilities for supporting custom peer-to-peer messages in LDK.
"""
edition = "2021"
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitcoin = "0.32.2"
lightning = { version = "0.3.0-beta1", path = "../lightning" }

[lints]
workspace = true
