[package]
name = "lightning-dns-resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
lightning = { version = "0.0.124-rc1", path = "../lightning", default-features = false }
lightning-types = { version = "0.1", path = "../lightning-types", default-features = false }
dnssec-prover = { version = "0.6", default-features = false, features = [ "std", "tokio" ] }
tokio = { version = "1.0", default-features = false, features = ["rt"] }

[dev-dependencies]
bitcoin = { version = "0.32" }
tokio = { version = "1.0", default-features = false, features = ["macros", "time"] }
lightning = { version = "0.0.124-rc1", path = "../lightning", features = ["dnssec", "_test_utils"] }
