[package]
name = "lightning-liquidity"
version = "0.1.0-alpha.6"
authors = ["John Cantrell <johncantrell97@gmail.com>", "Elias Rohrer <dev@tnull.de>"]
homepage = "https://lightningdevkit.org/"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Types and primitives to integrate a spec-compliant LSP with an LDK-based node."
repository = "https://github.com/lightningdevkit/lightning-liquidity/"
readme = "README.md"
keywords = ["bitcoin", "lightning", "ldk", "bdk"]
categories = ["cryptography::cryptocurrencies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["lightning/std", "bitcoin/std", "lightning-invoice/std"]
no-std = ["hashbrown", "lightning/no-std"]

[dependencies]
lightning = { version = "0.0.125", default-features = false, features = ["max_level_trace"] }
lightning-types = { version = "0.1", default-features = false }
lightning-invoice = { version = "0.32.0", default-features = false, features = ["serde"] }
#lightning = { path = "../rust-lightning/lightning", default-features = false, features = ["max_level_trace"] }
#lightning-types = { path = "../rust-lightning/lightning-types", default-features = false }
#lightning-invoice = { path = "../rust-lightning/lightning-invoice", default-features = false, features = ["serde"] }

bitcoin = { version = "0.32.2", default-features = false, features = ["serde"] }
hashbrown = { version = "0.8", optional = true }

chrono = { version = "0.4", default-features = false, features = ["serde", "alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"

[dev-dependencies]
lightning = { version = "0.0.125", default-features = false, features = ["_test_utils"] }
lightning-persister = { version = "0.0.125", default-features = false }
lightning-background-processor = { version = "0.0.125", default-features = false, features = ["std"] }
# lightning = { path = "../rust-lightning/lightning", default-features = false, features = ["max_level_trace", "_test_utils"] }
# lightning-persister = { path = "../rust-lightning/lightning-persister", default-features = false }
# lightning-background-processor = { path = "../rust-lightning/lightning-background-processor", default-features = false, features = ["std"] }

proptest = "1.0.0"
tokio = { version = "1.35", default-features = false, features = [ "rt-multi-thread", "time", "sync", "macros" ] }

[lints.rust.unexpected_cfgs]
level = "forbid"
# When adding a new cfg attribute, ensure that it is added to this list.
check-cfg = [
	"cfg(lsps1_service)",
]
