[package]
name = "lightning-net-tor"
version = "0.1.0+git"
authors = ["LDK Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightningdevkit/rust-lightning/"
readme = "../README.md"
description = """
Implementation of the rust-lightning network stack using Tor.
For Rust-Lightning clients which wish to connect to Lightning P2P nodes over Tor,
this provides networking support with enhanced privacy.
"""
edition = "2021"
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitcoin = "0.32.2"
lightning = { version = "0.3.0", path = "../lightning" }
tokio = { version = "1.35", features = [ "rt", "sync", "net", "time", "io-util" ] }
arti-client = { version = "0.24", default-features = false, features = ["tokio", "rustls"] }
tor-rtcompat = "0.24"

[dev-dependencies]
tokio = { version = "1.35", features = [ "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }
lightning = { version = "0.3.0", path = "../lightning", features = ["_test_utils"] }

[lints]
workspace = true
