[package]
name = "lightning-persister"
version = "0.0.117-alpha2"
authors = ["Valentine Wallace", "Matt Corallo"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightningdevkit/rust-lightning"
description = """
Utilities for LDK data persistence and retrieval.
"""
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
sqlite = ["rusqlite"]
sqlite-bundled = ["sqlite", "rusqlite/bundled"]

[dependencies]
bitcoin = "0.29.0"
lightning = { version = "0.0.117-alpha2", path = "../lightning" }
rusqlite = { version = "0.28.0", optional = true, default-features = false}

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", default-features = false, features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[target.'cfg(ldk_bench)'.dependencies]
criterion = { version = "0.4", optional = true, default-features = false }

[dev-dependencies]
lightning = { version = "0.0.117-alpha2", path = "../lightning", features = ["_test_utils"] }
bitcoin = { version = "0.29.0", default-features = false }
rusqlite = { version = "0.28.0", default-features = false, features = ["bundled"]}
rand = "0.8.5"
